--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=secretphrases
 MONGODB_URI=mongodb+srv://admin:admin@cluster0.cp8ibjw.mongodb.net/?retryWrites=true&w=majority
